test/types/typedefs/bradc/redefineTypeNames3.good
redefineTypeNames3.chpl:1: In function 'main':
redefineTypeNames3.chpl:3: error: 'real' used before defined
redefineTypeNames3.chpl:4: note: defined here
redefineTypeNames3.chpl:4: error: 'imag' used before defined
redefineTypeNames3.chpl:5: note: defined here
redefineTypeNames3.chpl:5: error: 'string' used before defined
redefineTypeNames3.chpl:6: note: defined here
redefineTypeNames3.chpl:6: error: 'complex' used before defined
redefineTypeNames3.chpl:7: note: defined here
